tests/ui/fmt/format-args-out-of-range.rs
fn main() {
    println!("{}", 12345u8);
    //~^ ERROR: literal out of range
}
